--- a/css/style.sass
+++ b/css/style.sass
@@ -66,7 +66,7 @@ main
         margin-bottom: 160px
         h2
             margin-bottom: 60px
-        .slider
+        .slide
             display: flex
             .product__left
                 p
@@ -79,5 +79,11 @@ main
             .product__right
                 @extend .product__left
             //.center__slider
+.owl-carousel .owl-nav
+    position: absolute
+    margin: 100px !important  
+.show__now    
+    .btn__product
+        border: none    
 
                 
