--- a/css/style.sass
+++ b/css/style.sass
@@ -72,12 +72,11 @@ main
             .owl-nav
                 position: absolute
                 //margin: 10px !important  
-                right: 0 
+                right: 0
                 top: 0
         .slide
             display: flex
             .product__left
-                p
                 img
                     width: 340px
                     height: 440px
@@ -101,7 +100,7 @@ main
         margin: 0 64px
         position: relative
         margin-bottom: 130px
-        h2  
+        h2
             font-size: 24px
             line-height: 30px
             margin-bottom: 16px
@@ -109,7 +108,7 @@ main
             position: static
             .owl-nav
                 position: absolute
-                right: 0 
+                right: 0
                 top: 0
             .owl-dots
                 text-align: center
@@ -133,37 +132,149 @@ main
             background: url(../img/book.jpg) no-repeat
             @extend .books__left
     .together
+        margin: 0 64px 20px 64px
         p
             font-size: 43px
             line-height: 60px
             width: 43%
             margin-bottom: 65px
-        
-                
+        a
+            text-decoration: none
+            color: #000
+            cursor: pointer
+        .together__item
+            display: flex
+            margin-bottom: 20px
+            .item
+                text-align: center
+                img
+                    width: 233px
+                    height: 233px
+                    margin-bottom: 70px
+                .num
+                    font-size: 30px
+                    line-height: 45px
+                    margin-bottom: 90px
+                    text-align: left
+                .descr
+                    font-size: 24px
+                    line-height: 30px
+                    width: 80%
+                    text-align: left
+    .fairmined__gold
+        display: flex
+        margin-bottom: 90px
+        .fairmined__gold__left
+            background: url(../img/fairmined__gold-left.jpg) no-repeat
+            width: 50%
+            height: 936px
+        .fairmined__gold__right
+            background: url(../img/fairmined__gold-right.jpg) no-repeat
+            width: 50%
+            height: 936px
+            position: relative
+            h2
+                font-size: 48px
+                line-height: 60px
+                padding: 47px 50px
+            .descr
+                position: absolute
+                bottom: 64px
+                left: 50px
+    .banner
+        background: url(../img/banner.jpg) no-repeat
+        height: 547px
+        padding: 80px 64px 0 64px
+        color: #FFFFFF
+        .baner__menu
+            display: flex
+            justify-content: space-between
+            font-size: 18px
+            line-height: 27px
+        .title
+            font-size: 46px
+            line-height: 60px
+            width: 24%
+            margin: 180px 0 35px 0
+        .descr
+            padding-bottom: 60px
+            font-size: 18px
+            line-height: 22px
+            border-bottom: 3px solid rgba(255, 255, 255, 0.5)
+            width: 30%
+            position: relative
+            a
+                position: absolute
+                right: 0
+                bottom: 10px
+                img
+                    width: 21px
+                    height: 8px
+footer
+    display: flex
+    padding: 0 64px
+    position: relative
+    li
+        list-style-type: none
+        padding-bottom: 10px
+        a
+            text-decoration: none
+            color: #000
+    .footer__menu__left
+        width: 50%
+        .shop__by
+            .title
+                font-size: 18px
+                line-height: 25px
+                padding-bottom: 20px
+            .first__menu
+                display: flex
+                font-size: 15px
+                line-height: 20px
+                padding-bottom: 90px
+                   
+                li:not(:last-child)
+                    padding-right: 150px
+        .footer__left__bottom
+            display: flex
+            .social
+                padding-right: 150px
+                p
+                    font-size: 22px
+                    line-height: 29px
+                    padding-bottom: 20px
+                .social__icon
+                    display: flex
+                    img
+                        width: 40px
+                        height: 40px
+                        padding-right: 10px
+            .language
+                padding-top: 30px
+    .footer__menu__right
+        display: flex
+        p
+            font-size: 18px
+            line-height: 25px
+            padding-bottom: 20px
+        div:not(:last-child)
+            padding-right: 160px
+    .powered__by
+        font-size: 14px
+        line-height: 18px
+        color: #9B9B9B
+        position: absolute
+        right: 0
+        bottom: 0
+        display: flex
+        justify-content: space-between
+        width: 50%
+        padding-bottom: 35px
+        p:not(:first-child)
+            padding-right: 64px
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.show__now    
+.show__now
     .btn__product
-        border: none    
-
-    
-                
+        border: none
