--- a/css/style.sass
+++ b/css/style.sass
@@ -30,7 +30,14 @@ header
             text-transform: uppercase
             li
                 list-style: none
-        //.language
+                a
+                    text-decoration: none
+                    color: #000
+.language
+    color: #c4c4c4
+    text-transform: capitalize
+    .active
+        color: #000
         //.cart
 main
     .shop__all
