--- a/css/style.css
+++ b/css/style.css
@@ -20,35 +20,51 @@ header .head__top {
   height: 40px;
   background: #D8BF95;
 }
+
 header .head__top p {
   font-size: 14px;
   line-height: 18px;
   text-align: center;
   padding-top: 11px;
 }
+
 header .head__bottom {
   height: 88px;
   padding: 0 30px;
 }
+
 header .head__bottom .menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 25px 0;
   text-transform: uppercase;
 }
+
 header .head__bottom .menu li {
   list-style: none;
 }
+
 header .head__bottom .menu li a {
   text-decoration: none;
   color: #000;
 }
 
 .language {
-  color: #c4c4c4;
   text-transform: capitalize;
 }
+
+.language a {
+  color: #c4c4c4;
+  text-decoration: none;
+}
+
 .language .active {
   color: #000;
 }
@@ -59,6 +75,7 @@ main .shop__all {
   height: 620px;
   margin-bottom: 120px;
 }
+
 main .shop__all h2 {
   position: absolute;
   width: 90px;
@@ -68,191 +85,250 @@ main .shop__all h2 {
   line-height: 22px;
   text-transform: uppercase;
 }
+
 main .show__myel {
   position: relative;
   margin-left: 64px;
   margin-bottom: 115px;
 }
+
 main .show__myel h2 {
   position: absolute;
   right: 64px;
 }
+
 main .show__myel .text {
   font-size: 64px;
   line-height: 64px;
   width: 60%;
   padding-bottom: 30px;
 }
+
 main .show__myel .prscr {
   font-size: 20px;
   line-height: 25px;
 }
+
 main .show__new__arrivals {
   padding: 0 64px;
   margin-bottom: 160px;
   position: relative;
 }
+
 main .show__new__arrivals h2 {
   margin-bottom: 60px;
 }
+
 main .show__new__arrivals .owl-carousel {
   position: static;
 }
+
 main .show__new__arrivals .owl-carousel .owl-nav {
   position: absolute;
   right: 0;
   top: 0;
 }
+
 main .show__new__arrivals .slide {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
+
 main .show__new__arrivals .slide .product__left img, main .show__new__arrivals .slide .product__right img {
   width: 340px;
   height: 440px;
 }
+
 main .show__new__arrivals .slide .product__left .info, main .show__new__arrivals .slide .product__right .info {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
+
 main .bonne__mine {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
+
 main .bonne__mine .bonne__mine-left {
   background: url(../img/bonne.jpg) no-repeat;
   height: 936px;
   width: 50%;
   margin-bottom: 20px;
 }
+
 main .bonne__mine .bonne__mine-right {
   background: url(../img/t-shirt.png) no-repeat;
   height: 936px;
   width: 50%;
 }
+
 main .browse__by__categories {
   margin: 0 64px;
   position: relative;
   margin-bottom: 130px;
 }
+
 main .browse__by__categories h2 {
   font-size: 24px;
   line-height: 30px;
   margin-bottom: 16px;
 }
+
 main .browse__by__categories .owl-carousel {
   position: static;
 }
+
 main .browse__by__categories .owl-carousel .owl-nav {
   position: absolute;
   right: 0;
   top: 0;
 }
+
 main .browse__by__categories .owl-carousel .owl-dots {
   text-align: center;
   padding-top: 35px;
 }
+
 main .browse__by__categories .owl-carousel .owl-dots .owl-dot {
   background: #C4C4C4;
   width: 6px;
   height: 6px;
 }
+
 main .browse__by__categories .owl-carousel .owl-dots .owl-dot.active {
   background: #000;
   width: 6px;
   height: 6px;
 }
+
 main .one-of-a-kind-books {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-bottom: 90px;
 }
+
 main .one-of-a-kind-books .books__left, main .one-of-a-kind-books .books__right {
   background: url(../img/books.jpg) no-repeat;
   height: 936px;
   width: 50%;
 }
+
 main .one-of-a-kind-books .books__right {
   background: url(../img/book.jpg) no-repeat;
 }
+
 main .together {
   margin: 0 64px 20px 64px;
 }
+
 main .together p {
   font-size: 43px;
   line-height: 60px;
   width: 43%;
   margin-bottom: 65px;
 }
+
 main .together a {
   text-decoration: none;
   color: #000;
   cursor: pointer;
 }
+
 main .together .together__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-bottom: 20px;
 }
+
 main .together .together__item .item {
   text-align: center;
 }
+
 main .together .together__item .item img {
   width: 233px;
   height: 233px;
   margin-bottom: 70px;
 }
+
 main .together .together__item .item .num {
   font-size: 30px;
   line-height: 45px;
   margin-bottom: 90px;
   text-align: left;
 }
+
 main .together .together__item .item .descr {
   font-size: 24px;
   line-height: 30px;
   width: 80%;
   text-align: left;
 }
+
 main .fairmined__gold {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-bottom: 90px;
 }
+
 main .fairmined__gold .fairmined__gold__left {
   background: url(../img/fairmined__gold-left.jpg) no-repeat;
   width: 50%;
   height: 936px;
 }
+
 main .fairmined__gold .fairmined__gold__right {
   background: url(../img/fairmined__gold-right.jpg) no-repeat;
   width: 50%;
   height: 936px;
   position: relative;
 }
+
 main .fairmined__gold .fairmined__gold__right h2 {
   font-size: 48px;
   line-height: 60px;
   padding: 47px 50px;
 }
+
 main .fairmined__gold .fairmined__gold__right .descr {
   position: absolute;
   bottom: 64px;
   left: 50px;
 }
+
 main .banner {
   background: url(../img/banner.jpg) no-repeat;
   height: 547px;
   padding: 80px 64px 0 64px;
   color: #FFFFFF;
 }
+
 main .banner .baner__menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   font-size: 18px;
   line-height: 27px;
 }
+
 main .banner .title {
   font-size: 46px;
   line-height: 60px;
   width: 24%;
   margin: 180px 0 35px 0;
 }
+
 main .banner .descr {
   padding-bottom: 60px;
   font-size: 18px;
@@ -261,79 +337,107 @@ main .banner .descr {
   width: 30%;
   position: relative;
 }
+
 main .banner .descr a {
   position: absolute;
   right: 0;
   bottom: 10px;
 }
+
 main .banner .descr a img {
   width: 21px;
   height: 8px;
 }
 
 footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding: 0 64px;
   position: relative;
 }
+
 footer li {
   list-style-type: none;
   padding-bottom: 10px;
 }
+
 footer li a {
   text-decoration: none;
   color: #000;
 }
+
 footer .footer__menu__left {
   width: 50%;
 }
+
 footer .footer__menu__left .shop__by .title {
   font-size: 18px;
   line-height: 25px;
   padding-bottom: 20px;
 }
+
 footer .footer__menu__left .shop__by .first__menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   font-size: 15px;
   line-height: 20px;
   padding-bottom: 90px;
 }
+
 footer .footer__menu__left .shop__by .first__menu li:not(:last-child) {
   padding-right: 150px;
 }
+
 footer .footer__menu__left .footer__left__bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
+
 footer .footer__menu__left .footer__left__bottom .social {
   padding-right: 150px;
 }
+
 footer .footer__menu__left .footer__left__bottom .social p {
   font-size: 22px;
   line-height: 29px;
   padding-bottom: 20px;
 }
+
 footer .footer__menu__left .footer__left__bottom .social .social__icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
+
 footer .footer__menu__left .footer__left__bottom .social .social__icon img {
   width: 40px;
   height: 40px;
   padding-right: 10px;
 }
+
 footer .footer__menu__left .footer__left__bottom .language {
   padding-top: 30px;
 }
+
 footer .footer__menu__right {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
+
 footer .footer__menu__right p {
   font-size: 18px;
   line-height: 25px;
   padding-bottom: 20px;
 }
+
 footer .footer__menu__right div:not(:last-child) {
   padding-right: 160px;
 }
+
 footer .powered__by {
   font-size: 14px;
   line-height: 18px;
@@ -341,15 +445,97 @@ footer .powered__by {
   position: absolute;
   right: 0;
   bottom: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 50%;
   padding-bottom: 35px;
 }
+
 footer .powered__by p:not(:first-child) {
   padding-right: 64px;
 }
 
-.show__now .btn__product {
-  border: none;
-}/*# sourceMappingURL=style.css.map */
+.modal__container {
+  text-align: center;
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+}
+
+.modal__container.active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #fffff73;
+}
+
+.modal__container .modal {
+  border-radius: 20px;
+  padding: 20px;
+  min-width: 500px;
+  min-height: 400px;
+  max-width: 500px;
+  max-height: 400px;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  -webkit-box-shadow: 0 0 50px 10px black;
+          box-shadow: 0 0 50px 10px black;
+}
+
+.modal__container .modal h2 {
+  margin: 30px 0;
+}
+
+.modal__container .modal form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.modal__container .modal form input {
+  width: 70%;
+  height: 30px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
+
+.modal__container .modal form input::-webkit-input-placeholder {
+  padding-left: 10px;
+}
+
+.modal__container .modal form input:-ms-input-placeholder {
+  padding-left: 10px;
+}
+
+.modal__container .modal form input::-ms-input-placeholder {
+  padding-left: 10px;
+}
+
+.modal__container .modal form input::placeholder {
+  padding-left: 10px;
+}
+
+.modal__container .modal form input[type=submit] {
+  font-weight: 700;
+  font-size: 18px;
+}
+/*# sourceMappingURL=style.css.map */
