--- a/css/style.sass
+++ b/css/style.sass
@@ -34,8 +34,11 @@ header
                     text-decoration: none
                     color: #000
 .language
-    color: #c4c4c4
+    
     text-transform: capitalize
+    a
+        color: #c4c4c4
+        text-decoration: none
     .active
         color: #000
         //.cart
@@ -280,8 +283,48 @@ footer
         p:not(:first-child)
             padding-right: 64px
 
+.modal__container
+    text-align: center
+    display: none
+    position: fixed
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
+    z-index: 1
+    &.active
+        display: flex
+        justify-content: center
+        align-items: center
+        background: #fffff73
+    .modal
+        border-radius: 20px
+        padding: 20px
+        min-width: 500px
+        min-height: 400px
+        max-width: 500px
+        max-height: 400px
+        width: 100%
+        height: 100%
+        background: #fff
+        box-shadow: 0 0 50px 10px black
+        h2
+            margin: 30px 0
+        form
+            display: flex
+            flex-direction: column
+            input
+                width: 70%
+                height: 30px
+                margin: 0 auto
+                margin-bottom: 20px
+                &::placeholder
+                    padding-left: 10px
+                &[type=submit]
+                    font-weight: 700
+                    font-size: 18px
 
 
-.show__now
-    .btn__product
-        border: none
+// .show__now
+//     .btn__product
+//         border: none
