--- a/css/style.sass
+++ b/css/style.sass
@@ -56,6 +56,7 @@ main
             font-size: 18px
             line-height: 22px
             text-transform: uppercase
+            
     .show__myel
         position: relative
         margin-left: 64px
@@ -81,7 +82,6 @@ main
             position: static
             .owl-nav
                 position: absolute
-                //margin: 10px !important  
                 right: 0
                 top: 0
         .slide
@@ -93,6 +93,9 @@ main
                 .info
                     display: flex
                     justify-content: space-between
+                    .show__now
+                        .btn__product
+                            border: none
             .product__right
                 @extend .product__left
     .bonne__mine
@@ -325,6 +328,4 @@ footer
                     font-size: 18px
 
 
-// .show__now
-//     .btn__product
-//         border: none
+
